--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "my-app-test-deployment",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "nx build qwerty --configuration production"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "11.10.6",
